# LLM-based-code-migration

./: .gitignore  LICENSE  README.md  experiment_log.txt
agent/: .gitignore  .gitmodules  README.md  kill_docker.py  langchain-agent.py  pyproject.toml
agent/.github/workflows/: build-images-claude-3-5-sonnet@20240620_augmented_prompt.yml  build-images-claude-3-haiku@20240307_augmented_prompt.yml  build-images-gemini-1.5-pro-001_augmented_prompt.yml  build-images-gpt-4o-mini.yml  build-images-gpt-4o-mini_augmented_prompt.yml  build-images-gpt-4o_augmented_prompt.yml  build-images-meta_llama-3.1-70b-instruct_augmented_prompt.yml  build-images-open-mistral-nemo_augmented_prompt.yml  check-schemas.yml
agent/analysis/: agent_langchain.ipynb  agent_simplified.ipynb  commit_to_message.json  dataset_analysis.ipynb  dspy_data.json  dspy_hashes.json  finetuning_draft.py  lm_mapping.json  message_to_commit.json  model_metadata.json  model_prices.json  parse_errors.ipynb  parser.ipynb  patch-analysis.ipynb  replicate.py  replicator.ipynb  total_tokens.ipynb  trace-analysis.ipynb
agent/dataset/00a7cc31784ac4a9cc27d506a73ae589d6df36d6/: api_changes.txt  extracted_compilation_errors.json  file_in_scope.txt  initial_error_lines.txt  minified_error_lines.txt  repo_slug.txt  reproduction_log.txt  super_minified_error_lines.txt  suspicious_files.json  updated_dependency_diff.txt  version_upgrade_str.txt
agent/dataset/0305beafdecb0b28f7c94264ed20cdc4e41ff067/: minified_error_lines.txt  reproduction_log.txt  updated_dependency_diff.txt
agent/dataset/067f5d2c81ff87c90755f4ed48f62eb5faa8ecf9/: extracted_compilation_errors.json  reproduction_log.txt  super_minified_error_lines.txt  updated_dependency_diff.txt
agent/dataset/06c5386831e97e94d9b9fd155d3ea4aa8711c4e7/: file_in_scope.txt  reproduction_log.txt  updated_dependency_diff.txt  version_upgrade_str.txt
agent/dataset/07e4b2894bc68cd3bb1892beaa13ec353564dcf1/: extracted_compilation_errors.json  initial_error_lines.txt  minified_error_lines.txt  reproduction_log.txt  updated_dependency_diff.txt  version_upgrade_str.txt
agent/dataset/07fad972bb884e9fa6143b4f870d08305811607d/: initial_error_lines.txt  reproduction_log.txt  updated_dependency_diff.txt  version_upgrade_str.txt
agent/dataset/0a11c04038eae517540051dbf51f7f26b7221f20/: api_changes.txt  file_in_scope.txt  initial_error_lines.txt  reproduction_log.txt  suspicious_files.json  updated_dependency_diff.txt  version_upgrade_str.txt
agent/dataset/0abf7148300f40a1da0538ab060552bca4a2f1d8/: api_changes.txt  extracted_compilation_errors.json  (+4 more)
zero-shot/: .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.md  README_GROQ_SETUP.md  analyze_fix.py  debug_groq.py  diff.txt  dspy-trace-analysis.ipynb  experiment_with_file_output.py  experiment_with_verification.py  focused_experiment_20250909_145625.json  focused_experiment_20250909_145702.json  full-claude-3-haiku@20240307_data.json  full_experiment.py  groq_experiment_with_files_20250908_232300.json  groq_pipeline_experiment.py  groq_pipeline_experiment_20250909_125632.json  groq_pipeline_experiment_20250909_125748.json  groq_pipeline_experiment_20250909_130152.json  groq_pipeline_experiment_20250909_130357.json  groq_pipeline_experiment_20250909_131017.json  groq_pipeline_experiment_20250909_131253.json  groq_pipeline_experiment_20250909_132656.json  groq_pipeline_experiment_20250909_144516.json  hashed_dataset.json  improved_experiment.py  improved_verification_results_20250908_231001.json  minimal_zero_shot.py  patch-analysis.ipynb  pipeline_claude-3-5-sonnet@20240620.db  pipeline_claude-3-haiku@20240307.db  pipeline_gemini-1.5-pro-001.db  pipeline_gpt-4o-mini.db  pipeline_gpt-4o.db  pipeline_meta-llama_Meta-Llama-3.1-70B-Instruct-Turbo.db  pipeline_mistral-nemo.db  pipeline_open-mistral-nemo.db  pipeline_text-bison@002.db  (+25 more)
zero-shot/historic-dataset/: .gitignore  changes.json  compiled-optimized  datafill.py  dependency-list.txt  dependency-reduced-pom.xml  diffs.ipynb  incompatibilities.json  pom.xml  test-parse.pom.xml
zero-shot/reproduce_failing_diff/: cloner.py  errors.json  experiment.ipynb  extract_patch.py  reproduce.py
zero-shot/spoon-transformer/: pom.xml
(+1560 files in other folders)
