[tool.poetry]
name = "masterthesis"
version = "0.1.0"
description = ""
readme = "README.md"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=7.0.0",
    "pre-commit<4.0.0,>=3.7.1",
    "sphinx<8.0.0,>=7.3.7",
    "prospector[with-bandit,with-mypy]<2.0.0,>=1.10.3",
    "syrupy<5.0.0,>=4.6.1",
    "ipykernel<7.0.0,>=6.29.4",
    "docker<8.0.0,>=7.1.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend", "cython"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
requires-python = "<3.13,>=3.12"
name = "masterthesis"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "docker>=7.1.0",
    "pytest-mock>=3.14.0",
    "syrupy>=4.6.1",
    "python-dotenv>=1.0.1",
    "GitPython>=3.1.43",
    "langchain>=0.2.12",
    "opentelemetry-exporter-otlp>=1.26.0",
    "black[jupyter]>=24.8.0",
    "mypy>=1.11.1",
    "langchain-openai>=0.1.20",
    "langchain-anthropic>=0.1.22",
    "langgraph>=0.1.19",
    "openinference-instrumentation-langchain>=0.1.26",
    "opentelemetry-sdk>=1.26.0",
    "langchain-together>=0.1.5",
    "langchain-mistralai>=0.1.12",
    "tenacity>=8.5.0",
    "langchain-google-vertexai>=1.0.8",
    "anthropic[vertex]>=0.32.0",
    "pathvalidate>=3.2.0",
    "diff-match-patch>=20230430",
    "cython>=3.0.11",
    "langchain-nvidia-ai-endpoints>=0.2.1",
    "langchain-community>=0.2.12",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.2.2",
    "nbformat>=5.10.4",
    "graphviz>=0.20.3",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    "jinja2>=3.1.4",
    "pyarrow>=17.0.0",
    "unidiff>=0.7.5",
    "ipykernel>=6.29.5",
    "ijson>=3.3.0",
    "tok>=0.1.14",
    "cython>=3.0.11",
    "tabulate>=0.9.0",
    "ipywidgets>=8.1.3",
    "matplotlib-venn>=1.1.1",
    "upsetplot>=0.9.0",
]
[tool.black]
extend-exclude = '''/dataset'''

[tool.pyright]
exclude = ["dataset/**/**", "dataset/*"]